Fix text truncation

--- a/src/index.css
+++ b/src/index.css
@@ -66,3 +66,11 @@ input[type=number] {
 label:hover {
     cursor: unset;
 }
+
+.max-lines-3 {
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    line-clamp: 3;
+    -webkit-box-orient: vertical;
+}
